--- a/src/app/components/shared/menuuser/menuuser.component.html
+++ b/src/app/components/shared/menuuser/menuuser.component.html
@@ -7,7 +7,7 @@
         <mat-icon>people</mat-icon>
     </button>
 
-    <button mat-icon-button style="margin-right: 20px;" routerLink="/home">
+    <button mat-icon-button style="margin-right: 20px;" (click)="logout()">
         <mat-icon>logout</mat-icon>
     </button>
 
