--- a/src/app/components/admin/add-book/add-book.component.html
+++ b/src/app/components/admin/add-book/add-book.component.html
@@ -27,6 +27,7 @@
                 <mat-option value="Novels">Novels</mat-option>
                 <mat-option value="Kids">Kids</mat-option>
                 <mat-option value="Political">Political</mat-option>
+                <mat-option value="Informative">Informative</mat-option>
             </mat-select>
         </mat-form-field>
 
