--- a/src/app/components/admin/notifications/notifications.component.html
+++ b/src/app/components/admin/notifications/notifications.component.html
@@ -35,7 +35,7 @@
 
           <ng-container matColumnDef="Cart">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Cart </th>
-            <td mat-cell *matCellDef="let row"><button mat-raised-button color="primary">
+            <td mat-cell *matCellDef="let row"><button mat-raised-button color="primary" (click)="reqAccepted(row.id)">
               accept
             </button></td>
           </ng-container>
