--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,6 @@
 <div class="A">
 <app-menu2></app-menu2>
     <h1 class="mat-display-2">𝐵𝑜𝑜𝓀 𝒵𝑜𝓃𝑒..</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, hic asperiores enim amet veritatis aliquam!
-    Eligendi repellat voluptatibus voluptates totam, exercitationem in consectetur eum velit pariatur delectus
-    voluptatum, consequuntur veritatis quaerat reprehenderit aliquam fuga ut et magnam fugiat ratione ab ducimus id
-    veniam. Sed tempora asperiores alias. Eos, ut beatae?</p>
+    <p>Welcome to our new Online library BookZone.. which will provide you good series of books in each and every category...visit each section and enjoy the journey of knowledge</p>
 </div>
 <router-outlet></router-outlet>
