--- a/src/app/components/shared/menu2/menu2.component.html
+++ b/src/app/components/shared/menu2/menu2.component.html
@@ -1,14 +1,14 @@
 <mat-toolbar color="primary">
     
-    <span>Books.com</span>
+    <span>BookZone.com</span>
     <span class="example-spacer"></span>
+
+   
  
-    <button mat-icon-button style="margin-right: 20px;" (click)="openDialog()">
+    <button mat-icon-button style="margin-right: 30px;" (click)="openDialog()">Log-In
       <mat-icon>login</mat-icon>
     </button>
-     <button mat-icon-button  style="margin-right: 20px;" >
-        <mat-icon>people</mat-icon>
-      </button>
+    
 
     
   
