--- a/src/app/components/shared/menuuser/menuuser.component.html
+++ b/src/app/components/shared/menuuser/menuuser.component.html
@@ -1,11 +1,9 @@
 <mat-toolbar color="primary">
 
-    <span>User</span>
+    <span>BookZone.com</span>
     <span class="example-spacer"></span>
 
-    <button mat-icon-button style="margin-right: 20px;">
-        <mat-icon>people</mat-icon>
-    </button>
+
 
     <button mat-icon-button style="margin-right: 20px;" (click)="logout()">
         <mat-icon>logout</mat-icon>
