--- a/src/app/components/admin/notifications/notifications.component.css
+++ b/src/app/components/admin/notifications/notifications.component.css
@@ -17,12 +17,17 @@ h1
 
 
 table {
-    width: 100%;
+    width: 1100px;
  }
   
   
-  .mat-form-field {
+.mat-form-field {
     font-size: 14px;
     width: 100%;
   }
+
+ .table1{
  
+    width: 600px;
+  
+}
