--- a/src/app/components/admin/notifications/notifications.component.html
+++ b/src/app/components/admin/notifications/notifications.component.html
@@ -1,59 +1,65 @@
-<div class="container">
+<h1>New request..</h1>
+<form class="form">
+  <div class="container">
     <div>
-      <form [formGroup]= "requestForm">
-      <mat-form-field appearance="standard">
+      <form [formGroup]="requestForm">
+        <!-- <mat-form-field appearance="standard">
         <mat-label>SearchBook</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="Ex.Carebians" #input>
-      </mat-form-field>
-  
-      <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort>
-  
-          <!-- BookName Column -->
-          <ng-container matColumnDef="BookName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> BookName </th>
-            <td mat-cell *matCellDef="let row"> {{row.BookName}} </td>
-          </ng-container>
-  
-          <!-- Author Column -->
-          <ng-container matColumnDef="Author">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Author </th>
-            <td mat-cell *matCellDef="let row"> {{row.Author}}</td>
-          </ng-container>
-  
-          <!-- Quantity Column -->
-          <ng-container matColumnDef="Quantity">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantity </th>
-            <td mat-cell *matCellDef="let row"> {{row.Quantity}} </td>
-          </ng-container>
+      </mat-form-field> -->
 
-         <!-- Category Column -->
-          <ng-container matColumnDef="Category">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
-            <td mat-cell *matCellDef="let row"> {{row.Category}} </td>
-          </ng-container>
+        <div class="table">
+          <table mat-table [dataSource]="dataSource" matSort class="table1">
 
-          <ng-container matColumnDef="Cart">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Cart </th>
-            <td mat-cell *matCellDef="let row"><button mat-raised-button color="primary" (click)="reqAccepted(row.id)">
-              accept
-            </button></td>
-          </ng-container>
-  
-         
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
-          <!-- Row shown when there is no matching data. -->
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-          </tr>
-        </table>
-  
-        <mat-paginator [pageSizeOptions]="[5, 10, 20, 400]" aria-label="Select page of users"></mat-paginator>
-      </div>
-    </form>
+            <!-- BookName Column -->
+            <ng-container matColumnDef="BookName">
+              <th mat-header-cell *matHeaderCellDef> BookName </th>
+              <td mat-cell *matCellDef="let row"> {{row.BookName}} </td>
+            </ng-container>
+
+            <!-- Author Column -->
+            <ng-container matColumnDef="Author">
+              <th mat-header-cell *matHeaderCellDef> Author </th>
+              <td mat-cell *matCellDef="let row"> {{row.Author}}</td>
+            </ng-container>
+
+            <!-- Quantity Column -->
+            <ng-container matColumnDef="Quantity">
+              <th mat-header-cell *matHeaderCellDef> Quantity </th>
+              <td mat-cell *matCellDef="let row"> {{row.Quantity}} </td>
+            </ng-container>
+
+            <!-- Category Column -->
+            <ng-container matColumnDef="Category">
+              <th mat-header-cell *matHeaderCellDef> Category </th>
+              <td mat-cell *matCellDef="let row"> {{row.Category}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="Cart">
+              <th mat-header-cell *matHeaderCellDef> Cart </th>
+              <td mat-cell *matCellDef="let row"><button mat-raised-button color="primary"
+                  (click)="reqAccepted(row.id)">
+                  accept
+                </button>&nbsp;
+                <button mat-raised-button color="warn" (click)="Reject()">Reject</button>
+              </td>
+
+            </ng-container>
+
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            </tr>
+          </table>
+
+          <mat-paginator [pageSizeOptions]="[5, 10, 20, 400]" aria-label="Select page of users"></mat-paginator>
+        </div>
+      </form>
     </div>
   </div>
 
-<router-outlet></router-outlet>
+</form>
