--- a/src/app/components/shared/login/login.component.html
+++ b/src/app/components/shared/login/login.component.html
@@ -1,30 +1,29 @@
-<mat-card class="example-card">
-    <mat-card-header  >
-      <mat-card-title >Login</mat-card-title>
-    </mat-card-header>
-    <mat-card-content class="field">
-      <form class="form" >
-        <table class="example-full-width" cellspacing="0">
-          <tr>
-            <td>
-              <mat-form-field class="example-full-width">
-                <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
-              </mat-form-field>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <mat-form-field class="example-full-width">
-                <input matInput placeholder="Password" [(ngModel)]="password" type="password" name="password" required>
-              </mat-form-field>
-            </td>
-          </tr>
-        </table>
-      </form>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button color="success" style="text-align: center;" (click)="login()">Login</button>
-      <button mat-raised-button color="primary" mat-dialog-close>Close</button>
-    </mat-card-actions>
-  </mat-card>
-  
+<mat-card class="main">
+  <mat-card-header>
+    <mat-card-title>Login</mat-card-title>
+  </mat-card-header>
+  <mat-card-content class="field">
+    <form class="form">
+      <table class="example-full-width" cellspacing="0" class="table">
+        <tr>
+          <td>
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
+            </mat-form-field>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="Password" [(ngModel)]="password" type="password" name="password" required>
+            </mat-form-field>
+          </td>
+        </tr>
+      </table>
+    </form>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button color="success" style="text-align: center;" (click)="login()">Login</button>
+    <button mat-raised-button color="primary" mat-dialog-close>Close</button>
+  </mat-card-actions>
+</mat-card>
