Updates of role routing

--- a/src/app/components/admin/notifications/notifications.component.html
+++ b/src/app/components/admin/notifications/notifications.component.html
@@ -41,7 +41,7 @@
                   (click)="reqAccepted(row.id)">
                   accept
                 </button>&nbsp;
-                <button mat-raised-button color="warn" (click)="Reject()">Reject</button>
+                <button mat-raised-button color="warn" (click)="reject(row.id)">Reject</button>
               </td>
 
             </ng-container>
