--- a/src/app/components/shared/menuuser/menuuser.component.html
+++ b/src/app/components/shared/menuuser/menuuser.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" *ngIf="authService.isAuthenticated">
 
     <span>BookZone.com</span>
     <span class="example-spacer"></span>
